[package]
name = "tracing-log"
version = "0.2.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition = "2018"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = """
Provides compatibility between `tracing` and the `log` crate.
"""
categories = [
    "development-tools::debugging",
    "asynchronous",
]
keywords = ["logging", "tracing", "log"]
license = "MIT"
readme = "README.md"

[features]
default = ["log-tracer", "std"]
std = ["log/std"]
log-tracer = []

[dependencies]
tracing-core = { path = "../tracing-core", version = "0.2"}
log = { git = "https://github.com/pablosichert/log", rev = "30b1432a367006e63609b678afbd5fe5c0c728be" }
lazy_static = "1.3.0"
env_logger = { git = "https://github.com/pablosichert/env_logger", rev = "c86bfaf76f75f5e886a46e6745ce97745f53233c", optional = true }

[dev-dependencies]
tracing = { path = "../tracing", version = "0.2"}

[badges]
maintenance = { status = "actively-maintained" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
