[workspace]

[package]
name = "test-log-support"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
tracing = { path = "..", features = ["log", "log-always"] }
log = { git = "https://github.com/pablosichert/log", rev = "30b1432a367006e63609b678afbd5fe5c0c728be", features = ["std"] }
